#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.63])
AC_INIT([ypipe], [1.0], [liyu1981@gmail.com])
AC_CONFIG_SRCDIR([src/ypiped.c])
AC_CONFIG_HEADERS([include/config.h])

# Checks for programs.
AC_PROG_CC
AC_ARG_ENABLE([debug], [AS_HELP_STRING([--enable-debug], [compile with the debug infomation])],
                       [CFLAGS="-DDEBUG -g"],
                       [CFLAGS="-O2"])
AC_SUBST(cflags_extra, $CFLAGS)

AC_SUBST(ldflags_extra, "")

#AC_PROG_INSTALL

AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([memset select])

AC_ARG_ENABLE([test], [AS_HELP_STRING([--enable-test], [configure as test purpose.])],
                       [prefix=$(cd .; pwd)/test])
AC_SUBST(prefix, $prefix)

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
